Fix padding on mobile

--- a/public/css/ddstyle.css
+++ b/public/css/ddstyle.css
@@ -326,7 +326,7 @@ and (max-width : 480px) {
 
   .dd-navbar-mobile a {
     position: absolute;
-    padding: 1em;
+    padding: 2em 0 0 1.5em;
     left: 1em;
   }
 
